--- a/src/views/layouts/navbar.ejs
+++ b/src/views/layouts/navbar.ejs
@@ -53,6 +53,36 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+<!-- Logout Confirmation Modal -->
+<div
+  class="modal fade"
+  id="logoutModal"
+  tabindex="-1"
+  aria-labelledby="logoutModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="logoutModalLabel">Confirm Logout</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">Are you sure you want to log out?</div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Cancel
+        </button>
+        <a href="/logout" class="btn btn-danger">Yes, Log Out</a>
+      </div>
+    </div>
+  </div>
+</div>
+
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
@@ -97,7 +127,10 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/logout">Log out</a>
+          <!-- <a class="nav-link" href="/logout">Log out</a> -->
+          <a href="#" onclick="showLogoutModal(event)" class="nav-link"
+            >Log out</a
+          >
         </li>
         <% } else { %>
         <li class="nav-item">
@@ -111,3 +144,13 @@
     </div>
   </div>
 </nav>
+
+<script>
+  function showLogoutModal(event) {
+    event.preventDefault(); // Prevent the default link action
+    var logoutModal = new bootstrap.Modal(
+      document.getElementById("logoutModal")
+    );
+    logoutModal.show();
+  }
+</script>
