--- a/src/views/layouts/navbar.ejs
+++ b/src/views/layouts/navbar.ejs
@@ -106,11 +106,11 @@
           <a class="nav-link active" aria-current="page" href="/">Dashboard</a>
         </li>
         <% if (loggedIn && userType === 'Driver') { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/g">G Test</a>
+          </li>
         <li class="nav-item">
           <a class="nav-link" href="/g2">G2 Test</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/g">G Test</a>
         </li>
         <% } %> <% if (loggedIn && userType === 'Admin') { %>
         <li class="nav-item">
@@ -119,6 +119,16 @@
         <% } %> <% if (loggedIn && userType === 'Admin') { %>
         <li class="nav-item">
           <a class="nav-link" href="/slots">Slots</a>
+        </li>
+        <% if (loggedIn && userType === 'Admin') { %>
+        <li class="nav-item">
+          <a class="nav-link" href="/status"
+            >Status</a
+          >
+        </li>
+        <% } %> <% } %> <% if (loggedIn && userType === 'Examiner') { %>
+        <li class="nav-item">
+          <a class="nav-link" href="/examiner">Test Management</a>
         </li>
         <% } %> <% if (loggedIn) { %>
         <li class="nav-item">
